# Atomas

./: CMakeLists.txt  README.md
Resources/: elementcolors.txt  elementtext.txt
src/: main.cxx  model.cxx  model.hxx  ui.cxx  ui.hxx
test/: model_test.cxx
